--- a/index.html
+++ b/index.html
@@ -12,7 +12,10 @@
   <header>
     <img class="top-picture" src="./assetes/path0.png" alt="Wildlife">
     <p class="header-text">WILDLIFE</p>
-    <p class="header-text">Blog</p>
+    <p><button class="blog">Blog</button></p>
+    <p><button class="contacts">Contacts</button></p>
+    <button class="magnifying-glass"></img src="/assetes/Vector.png" alt="magnifying glass"></button>
+    <p><button class="sign-in">Sign In</button></p>
   </header>
   <main>
     <img class="main-picture" src="./assetes/Rectangle.png" alt="Main picture">
