add h1 and main text

--- a/index.html
+++ b/index.html
@@ -19,6 +19,9 @@
   </header>
   <main>
     <img class="main-picture" src="./assetes/Rectangle.png" alt="Main picture">
+    <h1>Survival</h1>
+    <p class="text-survival">What this means is that we exist to help protect our environment and do in numbers of ways. You can save the planet by donation.</p>
+    <p><button class="donate">Donate</button></p>
   </main>
   <footer>
   </footer>
