--- a/index.html
+++ b/index.html
@@ -14,14 +14,19 @@
     <p class="header-text">WILDLIFE</p>
     <p><button class="blog">Blog</button></p>
     <p><button class="contacts">Contacts</button></p>
-    <button class="magnifying-glass"></img src="/assetes/Vector.png" alt="magnifying glass"></button>
+    <button class="magnifying-glass"></img class="magnifying-glass-img" src="/assetes/Vector.png" alt="magnifying glass"></button>
     <p><button class="sign-in">Sign In</button></p>
   </header>
   <main>
-    <img class="main-picture" src="./assetes/Rectangle.png" alt="Main picture">
-    <h1>Survival</h1>
-    <p class="text-survival">What this means is that we exist to help protect our environment and do in numbers of ways. You can save the planet by donation.</p>
-    <p><button class="donate">Donate</button></p>
+    <div>
+      <img class="main-picture" src="./assetes/Rectangle.png" alt="Main picture">
+      <h1>Survival</h1>
+      <p class="text-survival">What this means is that we exist to help protect our environment and do in numbers of ways. You can save the planet by donation.</p>
+      <p><button class="donate">Donate</button></p>
+    </div>
+    <div class="middle-of-site">
+      <p class="articles">Latest articles</p>
+    </div>
   </main>
   <footer>
   </footer>
