--- a/index.html
+++ b/index.html
@@ -10,18 +10,20 @@
 </head>
 <body>
   <header class="header">
-    <img class="top-picture" src="./assetes/path0.png" alt="Wildlife">
+    <img class="logo-picture" src="./assetes/path0.png" alt="Wildlife">
     <p class="header-text">WILDLIFE</p>
-    <p><button class="blog">Blog</button></p>
-    <p><button class="contacts">Contacts</button></p>
-    <button class="magnifying-glass"><img class="magnifying-glass-img" src="./assetes/Vector.png" alt="magnifying glass"/></button>
-    <p><button class="sign-in">Sign In</button></p>
+    <div class="buttons-bar">
+      <button class="blog">Blog</button>
+      <button class="contacts">Contacts</button>
+      <button class="magnifying-glass-btn"><img class="magnifying-glass-img" src="./assetes/Vector.png" alt="magnifying glass"/></button>
+      <button class="sign-in">Sign In</button>
+    </div>
   </header>
   <main class="main">
     <div class="picture-container">
       <img class="main-picture" src="./assetes/Rectangle.png" alt="Main picture">
       <h1>Survival</h1>
-      <p class="text-survival">What this means is that we exist to help protect our environment and do in numbers of ways. You can save the planet by donation.</p>
+      <p class="text-survival">What this means is that we exis tto help protect our environment and do in numbers of ways. You can save the planet by donation.</p>
       <p><button class="donate">Donate</button></p>
     </div>
     <div class="middle-of-site">
