add middle of site and main content

--- a/index.html
+++ b/index.html
@@ -10,8 +10,10 @@
 </head>
 <body>
   <header class="header">
-    <img class="logo-picture" src="./assetes/path0.png" alt="Wildlife">
-    <p class="header-text">WILDLIFE</p>
+    <div class="logo-div">
+      <img class="logo-picture" src="./assetes/path0.png" alt="Wildlife">
+      <h1 class="header-text">WILDLIFE</h1>
+    </div>
     <div class="buttons-bar">
       <button class="blog">Blog</button>
       <button class="contacts">Contacts</button>
@@ -21,13 +23,21 @@
   </header>
   <main class="main">
     <div class="picture-container">
-      <img class="main-picture" src="./assetes/Rectangle.png" alt="Main picture">
-      <h1>Survival</h1>
+      <h2 class="survival">Survival</h2>
       <p class="text-survival">What this means is that we exis tto help protect our environment and do in numbers of ways. You can save the planet by donation.</p>
       <p><button class="donate">Donate</button></p>
     </div>
     <div class="middle-of-site">
-      <p class="articles">Latest articles</p>
+      <h3 class="articles">Latest articles</h3>
+      <h4 class="breaking-news">Breaking news from the wild</h4>
+      <div class="pictures-of-animals">
+        <button class="arrow-button"><img class="arrow" src="./assetes/Vector (1).png" alt="arrow"></button>
+        <img class="animal" src="./assetes/Rectangle (3).png" alt="Pictute of the deer">
+        <img class="animal" src="./assetes/Rectangle (1).png" alt="Pictute of the squirrel">
+        <img class="animal" src="./assetes/Rectangle (2).png" alt="Pictute of the bird">
+        <button class="arrow-button"><img class="arrow" src="./assetes/Vector (2).png" alt="arrow"></button>
+      </div>
+      <p class="get-noficated">Get notified about new amazing articles</p>
     </div>
   </main>
   <footer>
