add form, animal-text

--- a/index.html
+++ b/index.html
@@ -32,12 +32,25 @@
       <h4 class="breaking-news">Breaking news from the wild</h4>
       <div class="pictures-of-animals">
         <button class="arrow-button"><img class="arrow" src="./assetes/Vector (1).png" alt="arrow"></button>
-        <img class="animal" src="./assetes/Rectangle (3).png" alt="Pictute of the deer">
-        <img class="animal" src="./assetes/Rectangle (1).png" alt="Pictute of the squirrel">
-        <img class="animal" src="./assetes/Rectangle (2).png" alt="Pictute of the bird">
+        <div class="animal-div deer">
+          <h5 class="animal-heading">Deer</h5>
+          <p class="animal-text">Naturalist investigation</p>
+        </div>
+        <div class="animal-div squirrel">
+          <h5 class="animal-heading">Squirrel</h5>
+          <p class="animal-text">Kamikaze squirrels</p>
+        </div> 
+        <div class="animal-div bird">
+          <h5 class="animal-heading">Bird</h5>
+          <p class="animal-text">Birds Fight club</p>
+        </div>
         <button class="arrow-button"><img class="arrow" src="./assetes/Vector (2).png" alt="arrow"></button>
       </div>
-      <p class="get-noficated">Get notified about new amazing articles</p>
+      <h4 class="get-noficated">Get notified about new amazing articles</h4>
+        <form class="email-send">
+          <input class="email" type="text" name="email" id="email" placeholder="Email">
+          <button type="button" class="send">Send</button>
+        </form>
     </div>
   </main>
   <footer>
