finish project, start doing @media

--- a/index.html
+++ b/index.html
@@ -5,19 +5,19 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link href="style.css" rel="stylesheet">
-  <link rel="icon" href="./assetes/path0 - копия.png">
+  <link rel="icon" href="./assetes/Logo-black.png">
   <title>Uliana's Wildlife</title>
 </head>
 <body>
   <header class="header">
     <div class="logo-div">
-      <img class="logo-picture" src="./assetes/path0.png" alt="Wildlife">
+      <img class="logo-picture" src="./assetes/Logo-white.png" alt="Wildlife">
       <h1 class="header-text">WILDLIFE</h1>
     </div>
     <div class="buttons-bar">
       <button class="blog">Blog</button>
       <button class="contacts">Contacts</button>
-      <button class="magnifying-glass-btn"><img class="magnifying-glass-img" src="./assetes/Vector.png" alt="magnifying glass"/></button>
+      <button class="magnifying-glass-btn"><img class="magnifying-glass-img" src="./assetes/Magnifier.png" alt="magnifying glass"/></button>
       <button class="sign-in">Sign In</button>
     </div>
   </header>
@@ -31,7 +31,7 @@
       <h3 class="articles">Latest articles</h3>
       <h4 class="breaking-news">Breaking news from the wild</h4>
       <div class="pictures-of-animals">
-        <button class="arrow-button"><img class="arrow" src="./assetes/Vector (1).png" alt="arrow"></button>
+        <button class="arrow-button"><img class="arrow" src="./assetes/Arrow-left.png" alt="arrow"></button>
         <div class="animal-div deer">
           <h5 class="animal-heading">Deer</h5>
           <p class="animal-text">Naturalist investigation</p>
@@ -44,7 +44,7 @@
           <h5 class="animal-heading">Bird</h5>
           <p class="animal-text">Birds Fight club</p>
         </div>
-        <button class="arrow-button"><img class="arrow" src="./assetes/Vector (2).png" alt="arrow"></button>
+        <button class="arrow-button"><img class="arrow" src="./assetes/Arrow-right.png" alt="arrow"></button>
       </div>
       <h4 class="get-noficated">Get notified about new amazing articles</h4>
         <form class="email-send">
@@ -53,7 +53,22 @@
         </form>
     </div>
   </main>
-  <footer>
-  </footer>
+  <footer class="footer">
+    <div class="logo-div-footer">
+      <img class="logo-picture" src="./assetes/Logo-white.png" alt="Wildlife">
+      <h6 class="header-text">WILDLIFE</h6>
+    </div>
+    <div class="footer-text-wrap">
+      <button class="footer-text">Articles</button>
+      <button class="footer-text">About us</button>
+      <button class="footer-text">Learn more</button>
+    </div>
+    <div class="footer-buttons">
+      <button><img src="./assetes/Facebook.png" alt="Logo of Facebook"></button>
+      <button><img src="./assetes/Instagram.png" alt="Logo of Instagram"></button>
+      <button><img src="./assetes/Pinterest.png" alt="Logo of Pinterest"></button>
+      <button><img src="./assetes/Telegram.png" alt="Logo of Telegram"></button>
+    </div>
+    </footer>
 </body>
 </html>
