--- a/index.html
+++ b/index.html
@@ -64,10 +64,10 @@
       <button class="footer-text">Learn more</button>
     </div>
     <div class="footer-buttons">
-      <button><img src="./assetes/Facebook.png" alt="Logo of Facebook"></button>
-      <button><img src="./assetes/Instagram.png" alt="Logo of Instagram"></button>
-      <button><img src="./assetes/Pinterest.png" alt="Logo of Pinterest"></button>
-      <button><img src="./assetes/Telegram.png" alt="Logo of Telegram"></button>
+      <button><img class="social" src="./assetes/Facebook.png" alt="Logo of Facebook"></button>
+      <button><img class="social" src="./assetes/Instagram.png" alt="Logo of Instagram"></button>
+      <button><img class="social" src="./assetes/Pinterest.png" alt="Logo of Pinterest"></button>
+      <button><img class="social" src="./assetes/Telegram.png" alt="Logo of Telegram"></button>
     </div>
     </footer>
 </body>
