--- a/index.html
+++ b/index.html
@@ -59,8 +59,8 @@
       <h6 class="header-text">WILDLIFE</h6>
     </div>
     <div class="footer-text-wrap">
-      <button class="footer-text">Articles</button>
-      <button class="footer-text">About us</button>
+      <button class="footer-text text-footer">Articles</button>
+      <button class="footer-text text-footer">About us</button>
       <button class="footer-text">Learn more</button>
     </div>
     <div class="footer-buttons">
